--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start"
   },
   "dependencies": {
