--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -8,6 +7,7 @@
   "dependencies": {
     "next": "latest",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tailwind": "^4.0.0"
   }
 }
