--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "dependencies": {
     "next": "latest",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "tailwind": "^4.0.0"
+    "react-dom": "17.0.2"
   }
 }
